# CFTree

./: .gitignore  README.md  environment.yml  main.py
cases/wippolder/: city_bbox.geojson
scripts/: README.md  get_data.py  reconstruction.py  run_get_data.py  run_get_pointclouds.py  run_segmentation.py  run_tree_reconstruction.py  run_tree_segmentation.py  segmentation.py
src/: config.py
src/get_data/: clip_tile.py  download_geotiles.py  extract_dtm.py  tiles_clipper_robust.sh
src/get_pointclouds/: clip_tile.py  download_geotiles.py  tiles_clipper_robust.sh
src/reconstruction/: alpha_wrap_tree.py  construct_geometry.py  extract_DTM.py  extract_tree_metrics.py  trunk_estimation_tree.py  write_cityjson.py
src/reconstruction/AlphaWrap/: CMakeLists.txt  README.md  point_set_wrap_cli.cpp
src/segmentation/: README.md  generalize_forest_ids.py  segment_tile.py
src/segmentation/TreeSeparation/: README.md
src/vegetation_filter/: HOMED_vegetation_filter.py
